# xxchain

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: build-publish-image.yml
chainbridge/: Cargo.toml
chainbridge/src/: lib.rs  mock.rs  tests.rs
claims/: Cargo.toml
claims/src/: lib.rs  weights.rs
cli/: Cargo.toml  build.rs
cli/res/: canary.json  phoenixx.json  protonet.json  xxnetwork.json
cli/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  service.rs
cli/tests/: build_spec_works.rs  check_block_works.rs  common.rs  export_import_flow.rs  inspect_works.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs  telemetry.rs  temp_base_path_works.rs  version.rs  websocket_server.rs
doc/: rust-setup.md
executor/: Cargo.toml
executor/benches/: bench.rs
executor/src/: lib.rs
executor/tests/: basic.rs  common.rs  fees.rs  submit_transaction.rs
inspect/: Cargo.toml
inspect/src/: command.rs  lib.rs
migrations/: Cargo.toml
migrations/src/: lib.rs  vesting.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc-client/: Cargo.toml
rpc/src/: lib.rs
runtime/canary/: Cargo.toml
runtime/canary/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: constants.rs  impls.rs  lib.rs
runtime/phoenixx/: Cargo.toml
runtime/phoenixx/src/: constants.rs  impls.rs  lib.rs
runtime/protonet/: Cargo.toml
runtime/protonet/src/: constants.rs  impls.rs  lib.rs
runtime/xxnetwork/: Cargo.toml
runtime/xxnetwork/src/: constants.rs  impls.rs  lib.rs  precompiles.rs  voter_bags.rs
runtime/xxnetwork/src/weights/: claims.rs  frame_benchmarking.rs  frame_election_provider_support.rs  frame_system.rs  mod.rs  pallet_assets.rs  pallet_bags_list.rs  pallet_balances.rs  pallet_bounties.rs  pallet_child_bounties.rs  pallet_collective.rs  pallet_democracy.rs  pallet_election_provider_multi_phase.rs  pallet_elections_phragmen.rs  pallet_identity.rs  pallet_im_online.rs  pallet_membership.rs  pallet_multisig.rs  pallet_nfts.rs  pallet_offences.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_recovery.rs  pallet_scheduler.rs  pallet_session.rs  pallet_staking.rs  pallet_timestamp.rs  pallet_tips.rs  pallet_treasury.rs  pallet_uniques.rs  pallet_utility.rs  pallet_vesting.rs  swap.rs  xx_betanet_rewards.rs  xx_cmix.rs  xx_economics.rs  xx_public.rs  xx_team_custody.rs
scripts/: benchmark.sh  benchmark_bin.sh
staking/: Cargo.toml  README.md
staking/src/: benchmarking.rs  lib.rs  mock.rs  slashing.rs  testing_utils.rs  tests.rs  weights.rs  xx_tests.rs
swap/: Cargo.toml
swap/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
testing/: Cargo.toml
testing/src/: bench.rs  client.rs  genesis.rs  keyring.rs
utils/generate-bags/: Cargo.toml
utils/generate-bags/src/: main.rs
xx-betanet-rewards/: Cargo.toml
xx-betanet-rewards/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
xx-cmix/: Cargo.toml
xx-cmix/src/: benchmarking.rs  cmix.rs  lib.rs  mock.rs  tests.rs  weights.rs
xx-economics/: Cargo.toml
xx-economics/src/: benchmarking.rs  inflation.rs  lib.rs  mock.rs  rewards.rs  tests.rs  weights.rs
xx-public/: Cargo.toml
xx-public/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
xx-team-custody/: Cargo.toml
xx-team-custody/src/: benchmarking.rs  custody.rs  lib.rs  mock.rs  tests.rs  weights.rs
xxnetwork/: Cargo.toml
xxnetwork/src/: cmix.rs  custody.rs  inflation.rs  lib.rs
