[profile.release]
panic = 'unwind'

[workspace]
resolver = "2"
members = [
    'chainbridge',
    'claims',
    'cli',
    'executor',
    'migrations',
    'primitives',
    'rpc',
    'runtime/phoenixx',
    'runtime/protonet',
    'runtime/xxnetwork',
    'swap',
    'xx-betanet-rewards',
    'xx-cmix',
    'xx-economics',
    'xx-public',
    'xx-team-custody'
]
