[profile.release]
panic = 'unwind'

[workspace]
resolver = "2"
members = [
    'chainbridge',
    'claims',
    'cli',
    'executor',
    'migrations',
    'primitives',
    'rpc',
    'runtime/common',
    'runtime/canary',
    'runtime/xxnetwork',
    'swap',
    'xx-betanet-rewards',
    'xx-cmix',
    'xx-economics',
    'xx-public',
    'xx-team-custody',
    'utils/generate-bags'
]
