[workspace]
resolver = "2"
members = [
    'chainbridge',
    'claims',
    'cli',
    'executor',
    'inspect',
    'migrations',
    'primitives',
    'rpc',
    'runtime/common',
    'runtime/canary',
    'runtime/xxnetwork',
    'swap',
    'testing',
    'utils/generate-bags',
    'xx-betanet-rewards',
    'xx-cmix',
    'xx-economics',
    'xx-public',
    'xx-team-custody'
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
k256 = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
panic = 'unwind'
opt-level = 3

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1

[patch.'https://github.com/paritytech/substrate']
fork-tree = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-support-procedural = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-support-procedural-tools = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-support-procedural-tools-derive = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-assets = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-timestamp = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-allocator = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-chain-spec = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-chain-spec-derive = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-client-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-client-db = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-executor = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-executor-common = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-executor-wasmi = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-executor-wasmtime = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-informant = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-keystore = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-network = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-network-bitswap = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-network-common = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-network-light = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-network-sync = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-network-transactions = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-offchain = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-peerset = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-rpc = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-rpc-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-rpc-server = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-rpc-spec-v2 = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-service = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-state-db = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-sysinfo = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-telemetry = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-tracing = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-tracing-proc-macro = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-transaction-pool = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-transaction-pool-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-utils = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-api-proc-macro = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-application-crypto = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-arithmetic = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-blockchain = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-consensus = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-core-hashing = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-core-hashing-proc-macro = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-database = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-debug-derive = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-externalities = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-finality-grandpa = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-inherents = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-keystore = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-maybe-compressed-blob = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-offchain = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-panic-handler = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-rpc = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-runtime-interface = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-runtime-interface-proc-macro = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-session = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-staking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-state-machine = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-storage = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-timestamp = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-tracing = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-transaction-pool = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-transaction-storage-proof = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-trie = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-version = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-version-proc-macro = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-wasm-interface = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-weights = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
substrate-prometheus-endpoint = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
