[package]
name = 'chainbridge'
version = '0.0.2'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/xx-labs/substrate", branch = "xx-network" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks"
]
