[package]
name = "claims"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.13", default-features = false }
serde = { version = "1.0.126", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }

sp-std = { package = "sp-std", git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }

pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
pallet-vesting = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }

frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false, optional = true }

[features]
default = ["std"]
no_std = []
std = [
	"parity-scale-codec/std",
	"log/std",
	"rustc-hex/std",
	"serde/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"pallet-balances/std",
	"pallet-vesting/std",
	"frame-system/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"pallet-balances/try-runtime",
	"pallet-vesting/try-runtime",
]
