[package]
name = "claims"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>", "xxlabs <admin@xx.network>"]
edition = "2021"

[dependencies]
parity-scale-codec = { version = "2.2.0", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
log = { version = "0.4.13", default-features = false }
serde = { version = "1.0.126", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }

sp-std = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-vesting = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false, optional = true }

libsecp256k1 = { version = "0.7.0", default-features = false }


[dev-dependencies]
hex-literal = "0.3.4"
serde_json = "1.0.69"
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "xx-network" }
libsecp256k1 = "0.7.0"

[features]
default = ["std"]
no_std = []
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"rustc-hex/std",
	"serde/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"pallet-balances/std",
	"pallet-vesting/std",
	"frame-system/std",
	"libsecp256k1/std",
]
runtime-benchmarks = [
    "libsecp256k1/hmac",
    "libsecp256k1/static-context",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"pallet-balances/try-runtime",
	"pallet-vesting/try-runtime",
]
