[package]
name = "xxnetwork-cli"
version = "0.2.4"
authors = ["xxlabs <admin@xx.network>"]
description = "Substrate based, xxnetwork blockchain node implementation in Rust."
build = "build.rs"
edition = "2021"
default-run = "xxnetwork-chain"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "xxnetwork-chain"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
clap = { version = "3.1.18", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.136", features = ["derive"] }
jsonrpsee = { version = "0.15.1", features = ["server"] }
futures = "0.3.21"
hex-literal = "0.3.4"
log = "0.4.17"
rand = "0.8"

# primitives
sp-authority-discovery = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
grandpa-primitives = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", package = "sp-finality-grandpa" }
sp-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-timestamp = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-authorship = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-inherents = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-keyring = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-keystore = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-consensus = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-transaction-pool = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-transaction-storage-proof = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-offchain = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-session = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

# client dependencies
sc-client-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-chain-spec = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-transaction-pool = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-transaction-pool-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-network = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-network-common = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus-slots = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus-uncles = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
grandpa = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", package = "sc-finality-grandpa" }
sc-rpc = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-basic-authorship = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-service = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sc-telemetry = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-executor = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-authority-discovery = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-sync-state-rpc = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-sysinfo = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

# frame dependencies
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
frame-system-rpc-runtime-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-transaction-payment = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-im-online = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

# node-specific dependencies
xxnetwork-runtime = { version = "0.2.4", path = "../runtime/xxnetwork", optional = true }
canary-runtime = { version = "0.2.0", path = "../runtime/canary", optional = true }
node-rpc = { version = "0.2.0", path = "../rpc" }
node-primitives = { version = "0.2.0", path = "../primitives" }
node-executor = { version = "0.2.0", path = "../executor" }
runtime-common = { version = "0.2.0", path = "../runtime/common" }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", optional = true }
frame-benchmarking-cli = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", optional = true }
node-inspect = { version = "0.2.0", optional = true, path = "../inspect" }
try-runtime-cli = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", optional = true }
serde_json = "1.0.79"

[target.'cfg(any(target_arch="x86_64", target_arch="aarch64"))'.dependencies]
node-executor = { version = "0.2.0", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", optional = true, features = [ "wasmtime" ] }
sc-service = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false, features = [ "wasmtime" ] }
sp-trie = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-client-db = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus-babe = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-consensus-epochs = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-service-test = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sc-block-builder = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-tracing = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-blockchain = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
futures = "0.3.21"
tempfile = "3.1.0"
assert_cmd = "2.0.2"
nix = "0.23"
serde_json = "1.0"
regex = "1.5.5"
platforms = "2.0"
async-std = { version = "1.11.0", features = ["attributes"] }
soketto = "0.7.1"
criterion = { version = "0.3.5", features = ["async_tokio"] }
tokio = { version = "1.17.0", features = ["macros", "time", "parking_lot"] }
wait-timeout = "0.2"
remote-externalities = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

[build-dependencies]
clap = { version = "3.1.18", optional = true }
clap_complete = { version = "3.0", optional = true }
node-inspect = { version = "0.2.0", optional = true, path = "../inspect" }
frame-benchmarking-cli = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", optional = true }
substrate-build-script-utils = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", optional = true }
substrate-frame-cli = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", optional = true }
try-runtime-cli = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", optional = true }
sc-cli = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", optional = true }
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

[features]
default = ["cli", "xxnetwork"]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/rocksdb",
	"clap",
	"clap_complete",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"xxnetwork-runtime/runtime-benchmarks",
	"canary-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"xxnetwork-runtime/try-runtime",
	"canary-runtime/try-runtime",
	"try-runtime-cli",
]

xxnetwork = ["xxnetwork-runtime", "node-executor/xxnetwork"]
canary = ["canary-runtime", "node-executor/canary"]

fast-runtime = [
	"xxnetwork-runtime/fast-runtime",
	"canary-runtime/fast-runtime",
]
